# coursework

./: .gitignore  CMakeLists.txt  README.md
include/: Completer.h  CppHighlighterFactory.h  CppHighlightingRulesCreator.h  CppHighlightningRulesProvider.h  CppSpecFactory.h  DocumentState.h  EditorDocument.h  HighlighterFactory.h  HighlightingRulesCreator.h  HighlightningRulesProvider.h  Language.h  LanguageHighlighterStrategy.h  LanguageSpecFactory.h  LineNumberArea.h  MainWindow.h  MyEditor.h  PythonHighlighterFactory.h  PythonHighlightingRulesCreator.h  PythonHighlightningRulesProvider.h  PythonSpecFactory.h  Trie.h
include/Highlighters/: CppHighlighterStrategy.h  PythonHighlighterStrategy.h
include/states/: SavedState.h  UnSavedState.h
src/: Completer.cpp  CppHighlighterStrategy.cpp  CppHighlightingRulesCreator.cpp  CppHighlightingRulesProvider.cpp  EditorDocument.cpp  LanguageHighlighter.cpp  LanguageHighlighterStrategy.cpp  LineNumberArea.cpp  MainWindow.cpp  MyEditor.cpp  PythonHighlighterStrategy.cpp  PythonHighlightingRulesCreator.cpp  PythonHighlightningRulesProvider.cpp  Trie.cpp  main.cpp
